cmake_minimum_required(VERSION 3.17)
project(DataStructure)

set(CMAKE_CXX_STANDARD 14)

add_executable(DataStructure main.cpp Def.cpp Def.h Chapter2/SeqList/SeqList.cpp Chapter2/SeqList/SeqList.h Def.cpp Def.h main.cpp Def.cpp Def.h Chapter2/SeqList/SeqList.cpp Chapter2/SeqList/SeqList.h Chapter2/SqList/SqList.cpp Chapter2/SqList/SqList.h Chapter2/LNode/LNode.cpp Chapter2/LNode/LNode.h Chapter2/DNode/DNode.cpp Chapter2/DNode/DNode.h Chapter2/STNode/STNode.cpp Chapter2/STNode/STNode.h Chapter3/SqStack/SqStack.cpp Chapter3/SqStack/SqStack.h Chapter3/ShStack/ShStack.cpp Chapter3/ShStack/ShStack.h Chapter3/SqQueue/SqQueue.cpp Chapter3/SqQueue/SqQueue.h)